--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ pycparser==2.20
 pydantic==1.7.2
 pyparsing==2.4.7
 pytest==6.1.2
+python-dotenv==0.15.0
 python-jose==3.2.0
 python-multipart==0.0.5
 redis==3.5.3
