--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
+amqp==5.0.2
+astroid==2.4.2
+async-exit-stack==1.0.1
+async-generator==1.10
 async-timeout==3.0.1
 atomicwrites==1.4.0
 attrs==20.3.0
+autopep8==1.5.4
 bcrypt==3.2.0
+billiard==3.6.3.0
+celery==5.0.3
 certifi==2020.11.8
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
 colorama==0.4.4
 cryptography==3.2.1
+dataclasses==0.8
 ecdsa==0.14.1
 elasticsearch==7.10.0
 elasticsearch-dbapi==0.1.3
@@ -17,19 +28,27 @@ hiredis==1.1.0
 idna==2.10
 importlib-metadata==3.0.0
 iniconfig==1.1.1
+isort==5.6.4
+kombu==5.0.2
+lazy-object-proxy==1.4.3
 manage.py==0.2.10
+mccabe==0.6.1
 packaging==20.4
 passlib==1.7.4
 pluggy==0.13.1
+prompt-toolkit==3.0.8
 py==1.9.0
 pyasn1==0.4.8
+pycodestyle==2.6.0
 pycparser==2.20
 pydantic==1.7.2
+pylint==2.6.0
 pyparsing==2.4.7
 pytest==6.1.2
 python-dotenv==0.15.0
 python-jose==3.2.0
 python-multipart==0.0.5
+pytz==2020.4
 redis==3.5.3
 requests==2.25.0
 rsa==4.6
@@ -37,7 +56,11 @@ six==1.15.0
 SQLAlchemy==1.3.20
 starlette==0.13.6
 toml==0.10.2
+typed-ast==1.4.1
 typing-extensions==3.7.4.3
 urllib3==1.26.2
 uvicorn==0.12.3
+vine==5.0.0
+wcwidth==0.2.5
+wrapt==1.12.1
 zipp==3.4.0
